@@ -1,6 +1,8 @@
 
 Version Next
 
+    - Extracted *Callback interfaces out of NullModem*Stream classes
+      NOTE: backward-incompatible change.
     - Added "vaadin" sub-package of org.dellroad.stuff.pobj
     - Added @ProvidesProperty annotation and container constructor support
     - Added EnumContainer, EnumComboBox, and EnumUtil
